2008-08-21  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/Makefile.am:
	* data/stylesheets/html1_css.xsl:
	* data/stylesheets/html1_css_ie.xsl:
	* data/stylesheets/html1_css_ie7.xsl:
	* data/stylesheets/html1_gantt.xsl:
	* data/stylesheets/html1_resources.xsl:
	* data/stylesheets/html1_tasks.xsl:
	* data/stylesheets/planner2html.xsl:
	Switched over from tables to divs for layout. Markup and CSS was validated
	and tested with Firefox 3.0.1 (perfect), Firefox 2.0.0.16 (minor issue with
	scrollbars), Opera 9.51 (perfect), Internet Explorer 6.0 & 7.0 (gantt
	scrollbars always visible, milestone diamond is shown as a square).
	Should fix bugs #471218 and #478027.

2008-07-29  Maurice van der Pot  <griffon26@kfk4ever.com>

	* Makefile.win32: Fix makefile for Windows to work with both libpng <=
	1.2.8, where the dll was named libpng13.dll, and libpng >= 1.2.29, where it
	is named libpng12-0.dll.

2008-07-29  Maurice van der Pot  <griffon26@kfk4ever.com>

	* Makefile.win32: Added font description files needed for printing on
	Windows (fixes crashes or lock-ups when trying to print). Also added a
	printer icon that was missing and the menu description for the print preview
	window.
	* data/planner.rc.in: Removed a few references to "Imendio Planner"	that
	would end up in the executable for Windows.

2008-07-22  Maurice van der Pot  <griffon26@kfk4ever.com>

	* src/Makefile.am:
	Now building everything in src/ except planner_main.c into a convenience
	library that can be used for testing.

	* src/planner-cmd-manager.c (transaction_cmd_do): Abort redo-ing as soon as
	the end of the transaction is encountered. Fixes bug #420443 reported by
	Lincoln Phipps <lincoln.phipps@openmutual.net>.

	* tests/Makefile.am:
	* tests/cmd-manager-test.c (test_cmd_do), (test_cmd_undo),
	(test_cmd_free), (test_cmd), (main):
	Added test for PlannerCmdManager, including regression test for bug #420443.

2008-07-22  Maurice van der Pot  <griffon26@kfk4ever.com>
