@@ -1,3 +1,9 @@
+2008-09-01  Maurice van der Pot  <griffon26@kfk4ever.com>
+
+	* src/planner-usage-row.c (usage_row_draw_resource_ival),
+	(usage_row_draw_resource): Fix drawing of the left edge of resource usage
+	bars, patch by Lee Bay <lee@leebaylis.co.uk>
+
 2008-08-21  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* data/stylesheets/Makefile.am:
